--- a/index.html
+++ b/index.html
@@ -147,15 +147,18 @@
         <div class="section-3-content">
           <p>Download the App from</p>
           <div class="section-3-download">
+            <a href="https://play.google.com/store/apps/details?id=com.application.zomato">
             <img
               src="https://b.zmtcdn.com/data/webuikit/23e930757c3df49840c482a8638bf5c31556001144.png
                 "
               alt=""
             />
+          </a>
+          <a href="https://apps.apple.com/in/app/zomato-food-delivery-dining/id434613896">
             <img
               src="https://b.zmtcdn.com/data/webuikit/9f0c85a5e33adb783fa0aef667075f9e1556003622.png
                 " alt=""
-            />
+            /></a>
           </div>
         </div>
       </div>
